--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
-__pycache__/
-test.ipynb
 test.py
+server.py
+client.py
+__client.py
+__server.py
+test.ipynb
+pypi.txt
+.env
+todo
+
+data/
+__pycache__/
+rcps/__pycache__
+api/__pycache__
+tests/
+build/
+dist/
+rcps.egg-info/
+env/
+misc/
